# spec-kit-schedule

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  config-template.yml  extension.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/actions/setup-uv-python/: action.yml
.github/scripts/: verify-zip-assets.sh
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  __init__.py  greedy_baseline.py  problems.py  run.py
commands/: calibrate.md  implement_bridge.md  portfolio.md  schedule.md  status.md  visualize.md
docs/: HANDOFF-v0.5.0.md  architecture.md  calibration.md  determinism.md  example-config-mixed.yml  example-config.yml  example-schedule.html  example-schedule.md  example-tasks.md  formulation.md  portfolio-design.md  tasks-format.md  when-to-use.md
docs/archive/: README.md
docs/internal/: wave-executor-bridge.md
examples/: README.md
examples/01-quickstart/: README.md  tasks.md
examples/01-quickstart/expected/: out.json
examples/02-cost-aware/: README.md  config.yml  tasks.md
examples/02-cost-aware/expected/: out.json
examples/03-replan/: README.md  config.yml  tasks.md
examples/03-replan/expected/: out.json  replan.json
examples/04-multi-provider/: README.md  config.yml  tasks.md
examples/04-multi-provider/expected/: out.json
solver/: __init__.py  _assets.py  _paths.py  _render_helpers.py  autodetect.py  calibrate.py  config_schema.py  defaults.py  fleet_discover.py  i18n.py  i18n_catalog.py  integration_detect.py  parse_tasks.py  portfolio_templates.py  render_html.py  render_schedule.py  replan.py  run_log.py  scheduler.py  status.py  validation.py  visualize.py  warnings_collector.py  wave_executor.py
solver/model/: __init__.py  build.py  fixed.py  result_types.py  types.py
solver/orchestration/: __init__.py  cost_aware.py  lex.py  runner.py
solver/result/: __init__.py  extract.py  summary.py
templates/: base-portfolio.yml  portfolio-claude.yml  portfolio-copilot.yml  portfolio-cursor.yml  portfolio-gemini.yml  schedule-template.md
tests/: _helpers.py  conftest.py  test_anytime.py  test_autodetect.py  test_benchmarks.py  test_calibrate.py  test_calibrate_loop_e2e.py  test_cli_help.py  test_config_schema.py  test_correctness_invariants.py  test_cost_objective.py  test_fleet_discover.py  test_gap_tolerance.py  test_horizon_stress.py  test_i18n.py  test_inline_summary.py  test_integration.py  test_integration_detect.py  test_invariant_branches.py  test_numerical_scale.py  test_parse_tasks.py  test_paths.py  test_phase1_infeasible_message.py  test_phase3_fallback.py  test_portfolio_templates.py  test_preflight_branches.py  test_property.py  test_render.py  test_render_html.py  test_replan.py  test_result_schema.py  test_run_log.py  test_scheduler.py  test_status.py  test_stochastic.py  test_symmetry_breaking.py  test_timeout.py  test_validation.py  test_visualize.py  test_warnings_handler.py  (+1 more)
