[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-kit-schedule"
version = "0.5.0"
description = "Optimal multi-agent task scheduling via CP-SAT (spec-kit extension)"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }
authors = [
    { name = "Julio César Franco Ardila" },
]
keywords = [
    "spec-kit",
    "scheduling",
    "cp-sat",
    "constraint-programming",
    "multi-agent",
    "llm-orchestration",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "ortools>=9.9,<10",
    "PyYAML>=6,<7",
    "networkx>=3.1,<4",
    "pydantic>=2,<3",
]

[project.urls]
Homepage = "https://github.com/juliofranco/spec-kit-schedule"
Documentation = "https://github.com/juliofranco/spec-kit-schedule#readme"
Issues = "https://github.com/juliofranco/spec-kit-schedule/issues"
Changelog = "https://github.com/juliofranco/spec-kit-schedule/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.6",
]
viz = [
    "matplotlib>=3.7,<4",
    "pydot>=2.0,<3",
    "plotly>=5,<6",
]

[project.scripts]
speckit-schedule-parse = "solver.parse_tasks:main"
speckit-schedule-solve = "solver.scheduler:main"
speckit-schedule-render = "solver.render_schedule:main"

[tool.setuptools.packages.find]
include = ["solver*"]
exclude = ["tests*", "docs*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4"]
ignore = ["E501"]  # long lines caught separately via line-length

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = ["error"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
warn_return_any = true
strict_equality = true
ignore_missing_imports = true

# Pre-existing modules not in scope for v0.5.0 strict clean-up.
# Each override uses the minimum relaxation needed to keep CI green while
# the relevant module owner migrates incrementally.
[[tool.mypy.overrides]]
module = [
    "solver.validation",
    "solver.config_schema",
    "solver.render_schedule",
    "solver.render_html",
    "solver.wave_executor",
    "solver.autodetect",
    "solver.calibrate",
    "solver.parse_tasks",
    "solver.replan",
    "solver.scheduler",
    "solver.visualize",
]
disallow_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false
disable_error_code = ["type-arg", "no-untyped-def", "no-untyped-call", "arg-type", "return-value", "assignment", "import-untyped", "union-attr", "unused-ignore", "no-any-return", "attr-defined", "dict-item", "misc", "index"]
